--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "Simple Inline validator or utility library for making developer life easier",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha --reporter spec"
+  "engines": {
+    "node": ">=4.2.4"
   },
   "keywords": [
     "Validator",
@@ -13,13 +13,16 @@
     "react-native-validator",
     "client-side-validator"
   ],
-  "engines": {
-    "node": ">=4.2.4"
-  },
   "author": "“Dinesh <“medineshkatwal@gmail.com”> (http://dineshkatwal.com.np)",
   "license": "ISC",
+  "scripts": {
+    "test": "node_modules/.bin/mocha --reporter spec",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^5.0.5"
   }
 }
